# LiaAI

./: .gitignore  README.md  main.py  pyproject.toml
api/audio/: audioController.py  audioRoute.py  audioSchema.py
api/chat/: chatController.py  chatRoute.py  chatSchema.py
core/agent/: assistant.py  prompt.py
core/audio/: transcriber.py  tts.py
core/llm/: client.py
core/memory/: history.py
core/tools/: __init__.py  registry.py  searchWeb.py
src/agent/: assistant.py
src/llm/: client.py
