[project]
name = "lia-server"
version = "0.1.0"
description = "Layre LIA Ai Core"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "edge-tts>=7.2.8",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
